hay un problema con el JSON, anda el envio de formulario pero lo recibe mal

--- a/Cliente/cliente.html
+++ b/Cliente/cliente.html
@@ -16,11 +16,12 @@
         }
     </script>
 -->
-
+    <h1 class='header'>Gestor de descarga de archivos</h1>
     <a href="popup_alta.html" target="popup"
         onclick="window.open('popup_alta.html','popup','width=200,height=300'); return false;">
-        <p style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 200%;">Subir Archivo</p>
-    </a> >
+        <p style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;">Subir Archivo
+        </p>
+    </a>
 
 
 
