estuve jugando con el css

--- a/Cliente/cliente.html
+++ b/Cliente/cliente.html
@@ -16,13 +16,33 @@
         }
     </script>
 -->
-    <h1 class='header'>Gestor de descarga de archivos</h1>
-    <a href="popup_alta.html" target="popup"
-        onclick="window.open('popup_alta.html','popup','width=200,height=300'); return false;">
-        <p style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;">Subir Archivo
-        </p>
-    </a>
 
+    <div class="panel" id="home">
+        <h1 class='header'>Gestor de descarga de archivos</h1>
+    </div>
+
+
+    <div class="panel" id="slice">
+        <div class="panel__content">
+            <a href="popup_alta.html" target="popup"
+                onclick="window.open('popup_alta.html','popup','width=400,height=280'); return false;">
+                <p
+                    style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;text-align: center;">
+                    Subir
+                    Archivo
+                </p>
+            </a>
+            <a href="#home">
+                Volver
+            </a>
+        </div>
+    </div>
+
+
+    <!-- Navigation -->
+    <div class="menu">
+        <a class="menu__link" href="#slice" data-hover="Slice">Subir Archivos</a>
+    </div>
 
 
 
