--- a/Cliente/popup_alta.html
+++ b/Cliente/popup_alta.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="popup_formulario" id="formulario_alta">
-      <form name=" File-Form" action="http://localhost:8080" method="POST">
+      <form name=" File-Form" onsubmit="cargaFile();return false">
         <label>id: </label><input type="text" name="fid" id="fid" /><br />
         <label>filename: </label
         ><input type="text" name="fname" id="fname" /><br />
@@ -19,7 +19,7 @@
         <label>nodePort: </label
         ><input type="text" name="fnodeport" id="fnodeport" /><br />
         <!--<button onclick="cartel();">Subir</button>-->
-        <button onclick="cargaFile();">Subir</button>
+        <button type="submit">Subir2</button>
       </form>
     </div>
     <script defer type="text/javascript" src="cliente.js"></script>
