css animations update

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -33,15 +33,31 @@
                 </p>
             </a>
             <a href="#home">
-                Volver
+                <p
+                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
+                    Volver</p>
             </a>
         </div>
     </div>
 
+    <div class="panel" id="slice2">
+        <div class="panel__content2">
+            <p
+                style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;text-align: center;">
+                Lista
+            </p>
+            <a href="#home">
+                <p
+                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
+                    Volver</p>
+            </a>
+        </div>
+    </div>
 
     <!-- Navigation -->
     <div class="menu">
         <a class="menu__link" href="#slice" data-hover="Slice">Subir Archivos</a>
+        <a class="menu__link" href="#slice2" data-hover="Slice">Buscar Archivos</a>
     </div>
 
 
