--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -24,24 +24,24 @@
 
     <div class="panel" id="slice">
         <div class="panel__content">
-            <a href="popup_alta.html" target="popup"
-                onclick="window.open('popup_alta.html','popup','width=400,height=280'); return false;">
-                <p
-                    style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;text-align: center;">
+            <div class="menu-subir-archivos">
+                <!--<a class="menu__link__subida" href="popup_alta.html" data-hover="Slice"
+                    onclick="window.open('popup_alta.html','popup','width=400,height=280'); return false;">
                     Subir
                     Archivo
-                </p>
-            </a>
-            <a href="#home">
-                <p
-                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
-                    Volver</p>
-            </a>
+                </a>-->
+                <a class="menu__link__subida" href="popup_alta.html" href="#slice3">Subir</a>
+                <a href="#home">
+                    <p
+                        style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px; padding-top: 20px; text-align: center; color: azure; margin-top: 50px;">
+                        Volver</p>
+                </a>
+            </div>
         </div>
     </div>
 
     <div class="panel" id="slice2">
-        <div class="panel__content2">
+        <div class="panel__content">
             <p
                 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;text-align: center;">
                 Lista
@@ -51,6 +51,13 @@
                     style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
                     Volver</p>
             </a>
+        </div>
+    </div>
+
+
+    <div class="panel" id="slice3">
+        <div class="panel__content">
+            HELLO
         </div>
     </div>
 
