--- a/Client/src/popup_alta.html
+++ b/Client/src/popup_alta.html
@@ -17,9 +17,14 @@
         <label>nodeIP: </label><input type="text" name="fnodeip" id="fnodeip" /><br />
         <label>nodePort: </label><input type="text" name="fnodeport" id="fnodeport" /><br />
         <!--<button onclick="cartel();">Subir</button>-->
-        <button type="submit">Subir2</button>
+        <button type="submit">Subir</button>
       </form>
     </div>
+    <a href="index.html">
+      <p
+        style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px; padding-top: 20px; text-align: center; color: rgb(2, 32, 32); margin-top: 50px;">
+        Volver</p>
+    </a>
     <script defer type="text/javascript" src="cliente.js"></script>
   </div>
 
