cambio de nombres

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -30,7 +30,7 @@
                     Subir
                     Archivo
                 </a>-->
-                <a class="menu__link__subida" href="popup_alta.html" href="#slice3">Subir</a>
+                <a class="menu__link__subida" href="ventana_alta.html" href="#slice3">Subir</a>
                 <a href="#home">
                     <p
                         style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px; padding-top: 20px; text-align: center; color: azure; margin-top: 50px;">
@@ -42,10 +42,7 @@
 
     <div class="panel" id="slice2">
         <div class="panel__content">
-            <p
-                style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 25px;padding-top: 200px;text-align: center;">
-                Lista
-            </p>
+            <a class="menu__link__subida" href="popup_alta.html" href="#slice3">Lista</a>
             <a href="#home">
                 <p
                     style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
