--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -5,64 +5,51 @@
     <meta charset="utf-8">
     <title>FrontEnd Cliente</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <!--
-    <script>
-
-        function popup() {
-            document.getElementById("formulario_alta").style.display = 'block';
-        }
-    </script>
--->
 
     <div class="panel" id="home">
-        <h1 class='header'>Gestor de descarga de archivos</h1>
-    </div>
 
+        <h1 class='header' id="header_main">Gestor de descarga de archivos</h1>
 
-    <div class="panel" id="slice">
-        <div class="panel__content">
-            <div class="menu-subir-archivos">
-                <!--<a class="menu__link__subida" href="popup_alta.html" data-hover="Slice"
-                    onclick="window.open('popup_alta.html','popup','width=400,height=280'); return false;">
-                    Subir
-                    Archivo
-                </a>-->
-                <a class="menu__link__subida" href="ventana_alta.html" href="#slice3">Subir</a>
-                <a href="#home">
-                    <p
-                        style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px; padding-top: 20px; text-align: center; color: azure; margin-top: 50px;">
-                        Volver</p>
+        <!-- Navigation -->
+        <div class="menu">
+            <a class="menu__link" href="#slice" data-hover="Slice">Subir Archivos</a>
+            <a class="menu__link" href="#slice2" data-hover="Slice">Buscar Archivos</a>
+        </div>
+
+        <div class="panel" id="slice">
+            <div class="panel__content">
+                <div class="menu-subir-archivos">
+                    <a class="menu__link__subida" href="ventana_alta.html" href="#slice3">Subir</a>
+                    <br>
+                    <br>
+                    <a class="boton__volver" href="#home">
+                        Volver
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel" id="slice2">
+            <div class="panel__content">
+                <a class="menu__link__buscar__elem" href="formulario_buscar.html" href="#slice3">Buscar un elemento</a>
+                <br>
+                <br>
+                <a class="menu__link__listar" href="ventana_descargas.html" href="#slice3">Listar todos los
+                    elementos</a>
+                <br>
+                <br>
+                <a class="boton__volver" href="#home">
+                    Volver
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="panel" id="slice2">
-        <div class="panel__content">
-            <a class="menu__link__subida" href="popup_alta.html" href="#slice3">Lista</a>
-            <a href="#home">
-                <p
-                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; padding-top: 50px; text-align: center; color: azure;">
-                    Volver</p>
-            </a>
-        </div>
-    </div>
 
-
-    <div class="panel" id="slice3">
-        <div class="panel__content">
-            HELLO
-        </div>
-    </div>
-
-    <!-- Navigation -->
-    <div class="menu">
-        <a class="menu__link" href="#slice" data-hover="Slice">Subir Archivos</a>
-        <a class="menu__link" href="#slice2" data-hover="Slice">Buscar Archivos</a>
-    </div>
 
 
 
