--- a/Client/src/ventana_descargas.html
+++ b/Client/src/ventana_descargas.html
@@ -12,8 +12,14 @@
     <div class="panel" id="panel_form_listar">
         Aca aparecería la lista de elementos para descargar
 
-    </div>
 
+
+
+        <a class="boton__volver" href="index.html">
+            Volver
+        </a>
+        <script defer type="text/javascript" src="cliente.js"></script>
+    </div>
 </body>
 
 </html>
