--- a/Client/src/formulario_buscar.html
+++ b/Client/src/formulario_buscar.html
@@ -10,10 +10,34 @@
 
 <body>
     <div class="panel" id="panel_form_buscar">
-        Form buscar
+        <div class="formulario" id="formulario_buscar"
+            style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ">
+            <form name="File-Form-Search" onsubmit="cargaFile();return false">
+                <h3>Formulario para buscar archivo</h3>
+                <br>
+                <label for="nombre">Nombre del archivo:
 
+                    <input type="text" name="fname" id="fname" />
+                </label>
+                <br>
+                <label for="size">Tamaño (en bytes):
+                    <input type="text" name="fsize" id="fsize" />
+                </label><br>
+                <label for="ip">IP del nodo:
+                    <input type="text" name="fnodeip" id="fnodeip" />
+                </label><br>
+                <label for="puerto">Puerto del nodo:
+                    <input type="text" name="fnodeport" id="fnodeport" />
+                </label><br>
+                <button type="submit">Subir</button>
+            </form>
+        </div>
+
+        <a class="boton__volver" href="index.html">
+            Volver
+        </a>
+        <script defer type="text/javascript" src="cliente.js"></script>
     </div>
-
 </body>
 
 </html>
