--- a/Client/src/ventana_alta.html
+++ b/Client/src/ventana_alta.html
@@ -19,7 +19,7 @@
           <input type="text" name="fname" id="fname" />
         </label>
         <br>
-        <label for="size">tamaño (en bytes):
+        <label for="size">Tamaño (en bytes):
           <input type="text" name="fsize" id="fsize" />
         </label><br>
         <label for="ip">IP del nodo:
