--- a/Client/src/formulario_buscar.html
+++ b/Client/src/formulario_buscar.html
@@ -12,7 +12,7 @@
     <div class="panel" id="panel_form_buscar">
         <div class="formulario" id="formulario_buscar"
             style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ">
-            <form name="File-Form-Search" onsubmit="cargaFile();return false">
+            <form name="File-Form-Search" onsubmit="buscaFile();return false">
                 <h3>Formulario para buscar archivo</h3>
                 <br>
                 <label for="nombre">Nombre del archivo:
