formulario para buscar archivo en los trackers

--- a/Client/src/formulario_buscar.html
+++ b/Client/src/formulario_buscar.html
@@ -23,13 +23,8 @@
                 <label for="size">Tamaño (en bytes):
                     <input type="text" name="fsize" id="fsize" />
                 </label><br>
-                <label for="ip">IP del nodo:
-                    <input type="text" name="fnodeip" id="fnodeip" />
-                </label><br>
-                <label for="puerto">Puerto del nodo:
-                    <input type="text" name="fnodeport" id="fnodeport" />
-                </label><br>
-                <button type="submit">Subir</button>
+
+                <button type="submit">Buscar</button>
             </form>
         </div>
 
