Added Listar desde el server al tracker + SCAN devolviendo la respuesta al server

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -36,7 +36,8 @@
         <div class="panel" id="slice2">
             <div class="panel__content">
 
-                <a class="menu__link__listar" href="ventana_descargas.html" href="#slice3">Listar todos los
+                <a class="menu__link__listar" href="ventana_descargas.html" href="#slice3" id="boton_listar">Listar
+                    todos los
                     elementos</a>
                 <br>
                 <br>
