Added generador de contenido HTML + Response
Dada la respuesta del servidor al cliente, se crea contenido HTML para listar los elementos

--- a/Client/src/ventana_descargas.html
+++ b/Client/src/ventana_descargas.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <div class="panel" id="panel_form_listar">
+    <div class="panel">
         Aca aparecería la lista de elementos para descargar
 
+        <div class="download" id="lista_descargas">
+
+        </div>
 
 
 
