--- a/Client/src/ventana_descargas.html
+++ b/Client/src/ventana_descargas.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="panel">
+    <div class="panel" id="panel_form_listar">
         Aca aparecería la lista de elementos para descargar
 
         <div class="download" id="lista_descargas">
