no se si anda el generador de html

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -36,7 +36,8 @@
         <div class="panel" id="slice2">
             <div class="panel__content">
 
-                <a class="menu__link__listar" href="ventana_descargas.html" href="#slice3" id="boton_listar">Listar
+                <a class="menu__link__listar" href="ventana_descargas.html" href="#slice3" id="boton_listar"
+                    onclick="listaFile()">Listar
                     todos los
                     elementos</a>
                 <br>
@@ -47,7 +48,7 @@
             </div>
         </div>
     </div>
-
+    <script defer type="text/javascript" src="cliente.js"></script>
 </body>
 
 </html>
