--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -32,7 +32,7 @@
     <div class="panel" id="slice2">
       <div class="panel__content">
 
-        <button class="boton__listar" onclick="listaFile();return false">
+        <button class="boton__listar" onclick="listaFile()">
           Listar todos los elementos
         </button>
 
