Cambios a la lista, ahora son labels y tienen un submit + el boton se esconde

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -31,10 +31,10 @@
 
     <div class="panel" id="slice2">
       <div class="panel__content">
-        <button class="boton__listar" onclick="listaFile()">
+        <button class="boton__listar" id="boton_listar" onclick="listaFile()">
           Listar todos los elementos
         </button>
-
+        <br>
         <div class="download" id="lista_descargas"></div>
         <br />
         <br />
