ya no hace el bug

--- a/Client/src/ventana_alta.html
+++ b/Client/src/ventana_alta.html
@@ -31,7 +31,7 @@
         <button type="submit">Subir</button>
       </form>
     </div>
-    <a class="boton__volver" href="index.html">
+    <a class="boton__volver" href="index.html?">
       Volver
     </a>
     <script defer type="text/javascript" src="cliente.js"></script>
