--- a/Client/src/ventana_alta.html
+++ b/Client/src/ventana_alta.html
@@ -28,7 +28,7 @@
         <label for="puerto">Puerto del nodo:
           <input type="text" name="fnodeport" id="fnodeport" />
         </label><br>
-        <button type="submit">Subir</button>
+        <button type="submit" onclick="limpiarCampos()">Subir</button>
       </form>
     </div>
     <a class="boton__volver" href="index.html?">
